@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 06-05-2006 fixed: Insane shoutcast memory usage. (now uses 256KB instead of 5MB internally)
  - 06-05-2006 changed: you can now alter trainer settings while kai is running. upon launch you will be asked to choose between kai and trainers.
  - 06-05-2006 changed: when viewing a .cbr/.cbz, move to top left corner on image change.
  - 06-05-2006 fixed: crash in my video info screen if you searched a movie by actor, then hit plot.
